--- a/src/Products_List/Product_Card.css
+++ b/src/Products_List/Product_Card.css
@@ -1,6 +1,8 @@
 .all_product_card{
   height: 400px;
-  color: rgb(112, 61, 61);
+  background-color: rgb(112, 61, 61);
+  border: 0px;
+  width: 500px;
 }
 .Card-img{
   text-align: center;
