--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,6 +1,7 @@
 .header{
     height: 425px;
     border-bottom: 1px solid  rgb(40, 40, 40);
+    background-color:  rgb(40, 40, 40);
 }
 .menu{
     border-bottom: 1px solid ivory;
