--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,6 +1,8 @@
 .header{
-    height: 425px;
-    border-bottom: 1px solid  rgb(40, 40, 40);
+    height: 290px;
+    width:100%;
+    margin: 0px;
+    border-bottom: 10px solid  rgb(190, 30, 30);
     background-color:  rgb(40, 40, 40);
 }
 .menu{
