--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -10,8 +10,9 @@
 .link {
     color:rgb(220, 60, 60);
     font-size: 18px;
-    padding: 10px 20px 10px 20px;
+    padding: 0px 20px 0px 20px;
     border-right: 1px solid rgb(190, 30, 30);
+    /* min-width: 200px; */
 }
 .link:hover {
     color:rgb(140, 40, 40);
