--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -4,15 +4,16 @@
     border-bottom: 5px solid rgb(190, 30, 30);
 }
 .menu{
-    border-left: 1px solid rgb(190, 30, 30);
+    /* border-right: 1px solid rgb(190, 30, 30); */
     margin-left: 30px;
 }
 .link {
     color:rgb(220, 60, 60);
     font-size: 18px;
-    padding: 0px 20px 0px 20px;
+    padding: 10px 20px 10px 20px;
+    max-width: 100px;
+    margin: 0;
     border-right: 1px solid rgb(190, 30, 30);
-    /* min-width: 200px; */
 }
 .link:hover {
     color:rgb(140, 40, 40);
