--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -13,7 +13,7 @@
     padding: 10px 20px 10px 20px;
     max-width: 100px;
     margin: 0;
-    border-right: 1px solid rgb(190, 30, 30);
+    border-right: 1px solid #be1e1e;
 }
 .link:hover {
     color:rgb(140, 40, 40);
