--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,22 +1,24 @@
 .header{
-    background-color: rgb(90, 90, 90);
+    background-color: rgb(25, 25, 25);
     margin: 0;
-    border-bottom: 5px solid rgb(190, 30, 30);
+    height: 100;
+    border-bottom: 5px solid #5A6268;
 }
 .menu{
     /* border-right: 1px solid rgb(190, 30, 30); */
     margin-left: 30px;
 }
 .link {
-    color:rgb(220, 60, 60);
-    font-size: 18px;
+    color:#DBDBDB;
+    font-size: 20px;
     padding: 10px 20px 10px 20px;
     max-width: 100px;
     margin: 0;
-    border-right: 1px solid #be1e1e;
+    border-right: 1px solid #DBDBDB;
 }
 .link:hover {
-    color:rgb(140, 40, 40);
+    color:#bbbbbb;
     text-decoration: none;
     transition: all 0.1s ease-out;
+    border-right: 1px solid #bbbbbb
 }
