--- a/src/Catalog/ProductCard.css
+++ b/src/Catalog/ProductCard.css
@@ -1,30 +1,23 @@
-
-
-
-
-
-
-
-
-
-
-
-
 .space-behind-product-card{
-  background-color:rgb(167, 167, 167);
-  /* background-color:rgb(71, 11, 11); */
+  /* background-color:rgb(25, 25, 25); */
   border: 0px;
 }
-.Product-card{
-  width: 200px;
-}
-.Card-img{
+.Card-Name{
   text-align: center;
+  text-decoration: none;
+  text-transform: none;
+  text-emphasis: none;
+  color: rgb(90, 90, 90);
 }
-.Card-img img{
-  size: cover;
-  height: 200px;
+.Card-Name:hover{
+  text-decoration: none;
+  color: rgb(90, 90, 90);
 }
+.Card-Price{
+  color: rgb(90, 90, 90);
+}
+
+
 .Card-title{
   text-align: center;
   font-size: 20px;
