--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,24 +1,24 @@
-.header{
-    background-color: rgb(25, 25, 25);
-    margin: 0;
-    height: 100;
-    border-bottom: 5px solid #808080;
+.header {
+  background-color: rgb(25, 25, 25);
+  margin: 0;
+  height: 100;
+  border-bottom: 5px solid #808080;
 }
-.menu{
-    /* border-right: 1px solid rgb(190, 30, 30); */
-    margin-left: 30px;
+.menu {
+  /* border-right: 1px solid rgb(190, 30, 30); */
+  margin-left: 30px;
 }
 .link {
-    color:#DBDBDB;
-    font-size: 20px;
-    padding: 10px 20px 10px 20px;
-    max-width: 100px;
-    margin: 0;
-    border-right: 1px solid #DBDBDB;
+  color: #dbdbdb;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  max-width: 100px;
+  margin: 0;
+  border-right: 1px solid #dbdbdb;
 }
 .link:hover {
-    color:#a1a1a1;
-    text-decoration: none;
-    transition: all 0.1s ease-out;
-    border-right: 1px solid #a1a1a1
+  color: #a1a1a1;
+  text-decoration: none;
+  transition: all 0.1s ease-out;
+  border-right: 1px solid #a1a1a1;
 }
